--- a/views/charHomePage.ejs
+++ b/views/charHomePage.ejs
@@ -17,23 +17,21 @@
     <div id="menu-bar" class="fas fa-bars"></div>
 
     <a style="text-decoration: none;" href="/charity" class="logo"><span>لـ</span>قمة عيش</a>
-        <nav class="navbar">
+    <nav class="navbar">
         <a style="text-decoration: none;" href="#packages">المطاعم</a>
         <a style="text-decoration: none;" href="#services">العروضات</a>
         <a style="text-decoration: none;" href="#book">حجز</a>
         <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
         <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
-        <a style="text-decoration: none;" href="/logout">تسجيل الخروج</a>
     </nav>
-     <div class="dropdown">
-     <div class="icons">
-    <i class="fas fa-search" id="search-btn"></i>
-    <a href = "/user" class="fas fa-user" id="login-btn"></a>
-     </div> 
+    <div class="dropdown">
+        <div class="icons">
+            <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
+            <a href = "/user" class="fas fa-user" id="login-btn"></a>
+        </div> 
     </div>
 
 </header>
-
 
 <!-- packages section starts  -->
 
