--- a/views/charHomePage.ejs
+++ b/views/charHomePage.ejs
@@ -67,6 +67,9 @@
                             <form action="/viewRes/page/<%= item.id %>?" method ="POST">
                             <button href="#services" class="btn" type="submit">  تفقد المطعم </button>
                         </form>
+                        <form action = "/profile/display/<%= item.id %>?" method = "POST">
+                            <button class="btn" type="submit">  عرض معلومات المطعم </button>
+                        </form>
                         </div>
                     </div>
                     <% 
