some little edits for finish

--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -17,7 +17,7 @@
     <div class="login-form-container">
     <a href="/" style="text-decoration: none;" class="fas fa-times" id="form-close"></a>
 
-        <form action="/auth2/signIn" method = "POST" class="needs-validation-login" novalidate>
+        <form action="/auth2/Login" method = "POST" class="needs-validation-login" novalidate>
             <h3>تسجيل الدخول</h3>
             <div class="form-group p-1 form-group">
                 <input name="email" type="email" class="box" placeholder="ادخل الايميل" id = "email" required>
