--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -16,7 +16,7 @@
 </head>
 <body style="background-color: #ffc153;">
     <header>
-        <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
+        <a style="text-decoration: none;" href="/restaurant" class="logo"><span>لـ</span>قمة عيش</a>
         <div class="dropdown">
             <div class="icons">
                 <a href = "/user" class="fas fa-user" id="login-btn"></a>
