--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -43,7 +43,7 @@
     </div>        
     <div class=""style="margin-top:15vh;width:10vw;margin-left:5vw;">
                 <div class="profile-img">
-                    <img src="imags/download.png" alt=""/>
+                    <img src= "./uploads/<%= data[0].img %>" alt=""/>
                     <div class="file btn btn-lg btn-primary">
                                
                         <input type="file" name="file"/>
