--- a/views/EditProfilePage.ejs
+++ b/views/EditProfilePage.ejs
@@ -29,28 +29,25 @@
     <div style="height: 70vh; margin-top: 20vh;display: flex;" class="container rounded bg-white col-md-6">
         <div class=""style="width:23vw">
             <div class="">
-                <form action = "/profile/edit/?_method=PUT" method = "POST">
+                <form action = "/profile/edit/?_method=PUT" method = "POST" enctype="multipart/form-data">
                     <div class="col-md-12"><label style="font-family: 'Vazirmatn', sans-serif;"class="labels">الاسم  :  </label><input style="width:12vw" class="p-4" name = "name" type="text"placeholder="  أدخل اسمك" value=""><br><br></div>
                     <div class="col-md-12"><label class="labels">الايميل  :  </label><input style="width:12vw" class="p-3" name = "email" type="text"  placeholder="أدخل ايميلك" value=""><br><br></div>
                     <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><input style="width:12vw" class="p-3" name = "phone" type="text"  placeholder="أدخل رقم هاتفك " value=""><br><br></div>
                     <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><input class="p-3" style="width:12vw" name = "website" type="text" placeholder="أدخل الموقع الالكتروني" value=""><br><br></div>
                     <div class="col-md-12"><label class="labels">الموقع  :  </label><input style="width:12vw" class="p-3" name = "location" type="text" placeholder="أدخل موقعك" value=""></div>
-            
                     <div class="mt-2 "><button style="margin-right:0" class="btn btn-primary profile-button" type="submit">حفظ التعديلات</button></div>
-                </form>
             </div>
         </div>   
 
         <div class=""style="margin-top:15vh;width:10vw;margin-left:5vw;">
             <div class="profile-img">
-                <img src="imags/download.png" alt=""/>
                 <div class="file btn btn-lg btn-primary">
                                  تعديل الصورة
-                    <input type="file" name="file"/>
+                    <input type="file" name="image"/>
                 </div>
             </div>
         </div>
-        
+    </form>
     </div>
 
 </body>
