--- a/views/charHomePage.ejs
+++ b/views/charHomePage.ejs
@@ -50,7 +50,7 @@
             if(resdata.length > 0 ){
                 resdata.forEach((item) => { %>
                     <div class="box">
-                        <img src="imags/١١.png" alt="">
+                        <img src="./uploads/<%= item.img %>" alt="">
                         <div class="content 1">
                             <h3> <i class="fas fa-map-marker-alt"></i> مطعم <%= item.name %> </h3>
                             <br><br>
