--- a/views/EditProfilePage.ejs
+++ b/views/EditProfilePage.ejs
@@ -37,7 +37,82 @@
                     <div class="col-md-12"><label class="labels">الموقع  :  </label><input style="width:12vw" class="p-3" name = "location" type="text" placeholder="أدخل موقعك" value=""></div>
                     <div class="mt-2 "><button style="margin-right:0" class="btn btn-primary profile-button" type="submit">حفظ التعديلات</button></div>
             </div>
-        </div>   
+        </div>   <!DOCTYPE html>
+        <html lang="ar"dir="rtl">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>لقمة عيش</title>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+            <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@200&family=Vazirmatn:wght@100;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/style.css">
+        </head>
+        <body style="  background-color: #ffc153;">
+            <header>
+                <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
+                <div class="dropdown">
+                    <div class="icons">
+                        <a href = "/user" class="fas fa-user" id="login-btn"></a>
+                        <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
+                    </div> 
+                </div>
+            </header>
+        
+            <div style="height: 70vh; margin-top: 20vh;" class=" bg-white col-md-6">
+                <form action = "/profile/edit/?_method=PUT" method = "POST" enctype="multipart/form-data">
+                    <div style="display: flex;" class="container rounded" >
+                        <div class=""style="width:23vw">
+                            <div class="mt-5">
+                                <div class="col-md-12"><label style="font-family: 'Vazirmatn', sans-serif;"class="labels">الاسم  :  </label><input style="width:12vw" class="p-4" name = "name" type="text"placeholder="  أدخل اسمك" value=""><br><br></div>
+                                <div class="col-md-12"><label class="labels">الايميل  :  </label><input style="width:12vw" class="p-3" name = "email" type="text"  placeholder="أدخل ايميلك" value=""><br><br></div>
+                                <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><input style="width:12vw" class="p-3" name = "phone" type="text"  placeholder="أدخل رقم هاتفك " value=""><br><br></div>
+                                <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><input class="p-3" style="width:12vw" name = "website" type="text" placeholder="أدخل الموقع الالكتروني" value=""><br><br></div>
+                                <div class="col-md-12"><label class="labels">الموقع  :  </label><input style="width:12vw" class="p-3" name = "location" type="text" placeholder="أدخل موقعك" value=""></div>
+                                <div class="mt-2 "><button style="margin-right:0" class="btn btn-primary profile-button" type="submit">حفظ التعديلات</button></div>
+                            </div>
+                        </div>   
+        
+                        <div class=""style="margin-top:15vh;width:10vw;margin-left:5vw;">
+                            <div class="profile-img">
+                                <div class="file btn btn-lg btn-primary">
+                                    تعديل الصورة  
+                                <input type="file" name="image"/>
+                                </div>
+                            </div>
+                    
+                        </div>
+                    </div><br>
+                </form>
+                <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                    </symbol>
+                    <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+                    </symbol>
+                    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </symbol>
+                </svg>
+              <%  if(message!=''){%>
+                <div style = "display:block;" class="alert alert-warning d-flex align-items-center" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                    <div>  <%=  message %>  </div>
+                  </div>
+              <%}
+              %>
+            </div>
+            
+        </body>
+        </html>
+        
 
         <div class=""style="margin-top:15vh;width:10vw;margin-left:5vw;">
             <div class="profile-img">
