Attempt to fix the issue in orders

--- a/views/charHomePage.ejs
+++ b/views/charHomePage.ejs
@@ -62,7 +62,7 @@
                                 <i class="far fa-star"></i>
                             </div>
                             <br><br><br><br>
-                            <form action="/viewRes/page/<%= item.id %>?" method ="POST">
+                            <form action="/viewRes/page/<%= item.id %>" method ="GET">
                             <button href="#services" class="btn" type="submit">  تفقد المطعم </button>
                         </form>
                         <form action = "/profile/display/<%= item.id %>?" method = "POST">
