--- a/views/viewResPage.ejs
+++ b/views/viewResPage.ejs
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/style.css">
+    <script src="/resturantPage.js" defer></script>
 </head>
 <body>
     <header>
@@ -32,46 +33,76 @@
 
             <div class="box x 1">
                 <i class="fas fa-utensils"></i>
-                <h3>وجبات رئيسية</h3>
+                <h3 class="mainDishes">وجبات رئيسية</h3>
                 <label type='text' > <%= resdata[0].discription %> </label>
-                <p> الكمية : <%= resdata[0].quantity %></p>
-                <a href="#services" class="btn"> حجز </a>
-
+                <p class="mainDishes"> الكمية : <%= resdata[0].quantity %></p>
+                <% if(resdata[0].quantity == 0){ %>
+                    <button class="btn" disabled> حجز </button>
+                <%}else{%> 
+                    <button class="btn mainDishes" > حجز </button>
+                    <input style = "display: none;" id= "mainDishes" value = "<%= resdata[0].id %>" class = "resturantId">
+                <%}%>  
             </div>
-            <div class="box x 2">
+            <div class="box x 2"> 
                 <i class="fas fa-utensils"></i>
-                <h3>ساندويشات</h3>
+                <h3 class="sandwich">ساندويشات</h3>
                 <label type='text' > <%= resdata[1].discription %> </label>
-                <p>  الكمية :<%= resdata[1].quantity %>  </p>
-                <a href="#services" class="btn"> حجز </a>
+                <p class="sandwich"> الكمية : <%= resdata[1].quantity %>  </p> 
+                <% if(resdata[1].quantity == 0){ %>
+                    <button class="btn" disabled> حجز </button>
+                <%}else{%> 
+                    <button class="btn sandwich"> حجز </button>
+                    <input style = "display: none;" value = "<%= resdata[1].id %>" class = "resturantId" id="sandwich">
+                <%}%>  
             </div>
             <div class="box x 3">
                 <i class="fas fa-utensils"></i>
-                <h3>عصائر</h3>
+                <h3 class = 'juice'>عصائر</h3>
                 <label type='text' > <%= resdata[2].discription %> </label>
-                <p> الكمية : <%= resdata[2].quantity %></p>
-                <a href="#services" class="btn"> حجز </a>
+                <p class = 'juice'> الكمية : <%= resdata[2].quantity %></p>  
+                <% if(resdata[2].quantity == 0){ %>
+                    <button class="btn" disabled> حجز </button>
+                <%}else{%> 
+                    <button class='btn juice'> حجز </button>
+                    <input style = "display: none;" value = "<%= resdata[2].id %>" class = "resturantId" id ="juice">
+                <%}%>  
             </div>
-            <div class="box x 4">
+            <div class="box x 4"> 
                 <i class="fas fa-utensils"></i>
-                <h3>حلويات</h3>
+                <h3 class="sweets">حلويات</h3>
                 <label type='text' > <%= resdata[3].discription %> </label>
-                <p> الكمية : <%= resdata[3].quantity %></p>
-                <a href="#services" class="btn"> حجز </a>
+                <p class="sweets"> الكمية : <%= resdata[3].quantity %></p> 
+                <% if(resdata[3].quantity == 0){ %>
+                    <button class="btn" disabled> حجز </button>
+                <%}else{%> 
+                    <button class="btn sweets"> حجز </button>
+                    <input style = "display: none;" value = "<%= resdata[3].id %>" class = "resturantId" id="sweets">
+                <%}%>  
             </div>
             <div class="box x 5">
                 <i class="fas fa-utensils"></i>
-                <h3>شوربات</h3>
+                <h3 class="soup">شوربات</h3>
                 <label type='text' > <%= resdata[4].discription %> </label>
-                <p> الكمية : <%= resdata[4].quantity %></p>
-                <a href="#services" class="btn"> حجز </a>
+                <p class="soup"> الكمية : <%= resdata[4].quantity %></p> 
+                <% if(resdata[4].quantity == 0){ %>
+                    <button class="btn" disabled> حجز </button>
+                <%}else{%> 
+                    <button class="btn soup"> حجز </button>
+                    <input style = "display: none;" value = "<%= resdata[4].id %>" class = "resturantId" id = "soup">
+
+                <%}%>  
             </div>
             <div class="box x 6">
                 <i class="fas fa-utensils"></i>
-                <h3>وجبات سريعة</h3>
+                <h3 class = 'fastFood'>وجبات سريعة</h3>
                 <label type='text' > <%= resdata[5].discription %> </label>
-                <p> الكمية : <%= resdata[5].quantity %></p>
-                <a href="#services" class="btn"> حجز </a>
+                <p class = 'fastFood'> الكمية : <%= resdata[5].quantity %></p> 
+                <% if(resdata[5].quantity == 0){ %>
+                    <button  class="btn" disabled> حجز </button>
+                <%}else{%> 
+                    <button class="btn fastFood"> حجز </button>
+                    <input style = "display: none;" value = "<%= resdata[5].id %>" class = "resturantId" id="fastFood">
+                <%}%>  
             </div>
     </div>
     </section>
@@ -89,7 +120,8 @@
         </h1>
 
     <div class="row">
-        <form action="">
+        <form action="/submitOrders" method="POST">       
+            <input style = "display: none;" value = "<%= resturantId %>" name = "resturantId">
             <div class="inputBox">
                 <h3>اسم الجمعية</h3>
                 <input type="text" placeholder="ادخل هنا">
@@ -102,7 +134,8 @@
                 <h3>رقم الهاتف</h3>
                 <input type="number" placeholder="رقم الهاتف او الجوال">
                 <h3>الحجوزات</h3>
-                <textarea id='text' type="text"></textarea>
+                <textarea id='text' type="text" name = 'orders'></textarea>
+                <textarea style = "display: none;"id='ids' type="text" name = 'menuId'></textarea>
             </div>
             <div class="inputBox">
                
