--- a/views/viewResPage.ejs
+++ b/views/viewResPage.ejs
@@ -124,15 +124,15 @@
             <input style = "display: none;" value = "<%= resturantId %>" name = "resturantId">
             <div class="inputBox">
                 <h3>اسم الجمعية</h3>
-                <input type="text" placeholder="ادخل هنا">
+                <input type="text" placeholder="ادخل هنا" value = "<%=charityInfo.name%>">
             </div>
             <div class="inputBox">
-                <h3>كم العدد</h3>
-                <input type="number" placeholder="عدد افراد الجمعية">
+                <h3>البريد الالكتروني</h3>
+                <input type="text" placeholder="بريد الجمعية الالكتروني" value = "<%=charityInfo.email%>">
             </div>
             <div class="inputBox">
                 <h3>رقم الهاتف</h3>
-                <input type="number" placeholder="رقم الهاتف او الجوال">
+                <input type="text" placeholder="رقم الهاتف او الجوال" value = "<%=charityInfo.phone%>">
                 <h3>الحجوزات</h3>
                 <textarea id='text' type="text" name = 'orders'></textarea>
                 <textarea style = "display: none;"id='ids' type="text" name = 'menuId'></textarea>
