--- a/views/viewResPage.ejs
+++ b/views/viewResPage.ejs
@@ -134,7 +134,7 @@
                 <h3>رقم الهاتف</h3>
                 <input type="text" placeholder="رقم الهاتف او الجوال" value = "<%=charityInfo.phone%>">
                 <h3>الحجوزات</h3>
-                <textarea id='text' type="text" name = 'orders'></textarea>
+                <textarea id='text' type="text" name = 'orders' required></textarea>
                 <textarea style = "display: none;"id='ids' type="text" name = 'menuId'></textarea>
             </div>
             <div class="inputBox">
