set minimum value to zero for resturant quantity

--- a/views/resHomePage.ejs
+++ b/views/resHomePage.ejs
@@ -41,7 +41,7 @@
                     <h3>وجبات رئيسية</h3>
                     <input name="discription1" type='text' placeholder=<%= res1 %>><br><br>
                     <label> الكمية: </label>
-                    <input name="quantity1" type="number" placeholder=<%= res11 %>><br>
+                    <input name="quantity1" type="number" min="0" placeholder=<%= res11 %>><br>
                     <button href="#services" class="btn"> حفظ التعديلات </button>
                 </form>
             </div>
@@ -51,7 +51,7 @@
                     <h3>ساندويشات</h3>
                     <input name="discription2" type='text' placeholder=<%= res2 %>><br><br>
                     <label> الكمية: </label>
-                    <input name="quantity2" type="number" placeholder=<%= res22 %>><br>
+                    <input name="quantity2" type="number" min="0" placeholder=<%= res22 %>><br>
                     <button href="#services" class="btn" type="submit"> حفظ التعديلات </button>
                 </form>
             </div>
@@ -62,7 +62,7 @@
                     <h3>عصائر</h3>
                     <input name="discription3" type='text' placeholder=<%= res3 %>  >  <br><br>
                     <label> الكمية: </label>
-                    <input name="quantity3" type="number" placeholder=<%= res33 %>><br>
+                    <input name="quantity3" type="number" min="0" placeholder=<%= res33 %>><br>
                     <button href="#services" class="btn" type="submit"> حفظ التعديلات </button>
                 </form>
             </div>
@@ -73,7 +73,7 @@
                     <h3>حلويات</h3>
                     <input name="discription4" type='text' placeholder=<%= res4 %>><br><br>
                     <label> الكمية: </label>
-                    <input name="quantity4" type="number" placeholder=<%= res44 %>><br>
+                    <input name="quantity4" type="number" min="0" placeholder=<%= res44 %>><br>
                     <button href="#services" class="btn" type="submit"> حفظ التعديلات </button>
                 </form>
             </div>
@@ -83,7 +83,7 @@
                     <h3>شوربات</h3>
                     <input name="discription5" type='text' placeholder=<%= res5 %>><br><br>
                     <label> الكمية: </label>
-                    <input name="quantity5" type="number" placeholder=<%= res55 %>><br>
+                    <input name="quantity5" type="number" min="0" placeholder=<%= res55 %>><br>
                     <button href="#services" class="btn" type="submit"> حفظ التعديلات </button>
                 </form>
             </div>
@@ -93,7 +93,7 @@
                     <h3>وجبات سريعة</h3>
                     <input name="discription6" type='text' placeholder=<%= res6 %>><br><br>
                     <label> الكمية: </label>
-                    <input name="quantity6" type="number" placeholder=<%= res66 %>><br>
+                    <input name="quantity6" type="number" min="0" placeholder=<%= res66 %>><br>
                     <button href="#services" class="btn" type="submit"> حفظ التعديلات </button>
                 </form>
             </div>
