Fix messages on change password pages

--- a/views/newPassword.ejs
+++ b/views/newPassword.ejs
@@ -37,7 +37,7 @@
             <input name="email" type="email" class="box" placeholder="ادخل ايميلك" required>
             <input type="submit" value="تأكيد" class="btn"><br>
             <!-- message for user -->
-            <%  if(validMessage!=''){  %>
+            <%  if(validMessage){  %>
                 <div class="alert alert-success d-flex align-items-center" role="alert">
                   <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
                   <div>
@@ -45,7 +45,7 @@
                   </div>
                 </div>
                 <% 
-              }else if(invalidMessage!=''){%>
+              }else if(invalidMessage){%>
                   <div class="alert alert-danger d-flex align-items-center" role="alert">
                       <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
                       <div>
