--- a/views/viewResPage.ejs
+++ b/views/viewResPage.ejs
@@ -135,7 +135,7 @@
                 <h3>رقم الهاتف</h3>
                 <input type="text" placeholder="رقم الهاتف او الجوال" value = "<%=charityInfo.phone%>" readonly>
                 <h3>الحجوزات</h3>
-                <textarea id='text' type="text" name = 'orders' required></textarea>
+                <textarea id='text' type="text" name = 'orders' required readonly></textarea>
                 <textarea style = "display: none;"id='ids' type="text" name = 'menuId'></textarea>
             </div>
             <div class="inputBox">
