Adding a toast message orders

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -284,7 +284,7 @@
         <h1>404</h1>
         <h2>عذرا, هذه الصفحة غير متوفرة.</h2>
         <p>هذه الصفحة غير متوفرة قد يكون الرابط الذي استخدمته معطّلاً، أو قد تكون الصفحة تمت إزالتها. </p>
-        <form action = "/error" method="POST">
+        <form action = "/error" method="GET">
             <button class="btn green" type="submit">الرئيسية</button>
         </form>
       </div>
